--- a/estilos/sass/estilos.scss
+++ b/estilos/sass/estilos.scss
@@ -267,8 +267,7 @@ body{
 .recognition{
     margin-top:3rem;
     background-color:#efefef;
-    .wrapper{
-        //max-width:500px;
+    .wrapper-recognition{
         width:95%;
         margin-left:auto;
         margin-right:auto;
