--- a/estilos/sass/estilos.scss
+++ b/estilos/sass/estilos.scss
@@ -143,6 +143,7 @@ body{
 .banner{
     background-image:url('../../img/banner.jpeg');
     background-size:cover;
+    background-position:50%;
     height:32rem;
     position:relative;
     z-index:10;
