add new features

--- a/estilos/sass/index.scss
+++ b/estilos/sass/index.scss
@@ -23,122 +23,7 @@ body{
     }
 }
 //Header
-.header{
-    position:sticky;
-    top:0;
-    z-index:30;
-    background-color:rgb(11, 96, 192);
-    .wrapper{
-        display:grid;
-        grid-template-columns:20% 80%;
-        grid-template-rows:1fr;
-        padding:1.5rem 0;
-        align-items:center;
-        color:#fff;
-        @media screen and (min-width:1024px){
-            grid-template-columns: 40% 60%;
-      
-        }
-    }
-}
-.name-company{
-    justify-self:flex-start;
-    text-align:center;
-    font-size: 1.6rem;
-    font-weight: 500;
-}
-.menu{
-    padding-top:4.5rem;
-    transform: translate(-100vw, 0);
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    display: flex;
-    background-color: rgba(0, 0, 0, 0.8);
-    width:100%;
-    font-weight:600;
-    transition: transform .5s ease;
- ul{
-     width:inherit;
-     list-style-type:none;
- }
- li{
-    padding-bottom:1.5rem;
-    margin:1.5rem 2.5rem 0 2.5rem;
-    border-bottom:1px solid gray;
-    &:first-of-type{
-    margin-top:0;
-    }
- }
- a {
-     text-decoration:none;
-     font-size:1.6rem;
-     color:#fff;
- }
-  @media screen and (min-width:1024px){
-      justify-self:flex-end;
-      position:static;
-      transform:translate(0,0);
-      top:initial;
-      bottom:initial;
-      right:initial;
-      left:initial;
-      background-color:transparent;
-      padding-top:0;
-      font-weight:400;
-      transition:initial;
-      width:auto;
-    ul{
-        display:flex;
-    }
-    li{
-        margin:0;
-        padding-bottom:0;
-        padding-right:1.5rem;
-        border-bottom:none;
-        &:last-of-type{
-            padding-right:0;
-        }
-    }
-    a{
-        font-size:1.2rem;
-    }
- }
- .close-menu{
-    display: inline-block;
-    color: #fff;
-    font-weight: 600;
-    position: absolute;
-    top: 5%;
-    right: 10%;
-    z-index: 40;
-    @media screen and (min-width:1024px){
-        position:static;
-        display:none;
-    }
-}
-}
-
-.show-menu{
-    transform: translate(0, 0);
-}
-
-.menu-burguer{
-    a{
-        width:1.4rem;
-        height:1.4rem;
-        display:inline-block;
-    }
-    img{
-        width:100%;
-        height:100%;
-    }
-    @media screen and(min-width:1024px){
-        display:none;
-    }
-}
+@import './header.scss';
 //banner
 .banner{
     background-image:url('../../img/banner.jpeg');
@@ -453,46 +338,5 @@ body{
 
 
 //Footer
-.footer{
-    background-color:rgb(11, 96, 192);
-    color:#fff;
-    .wrapper{
-        padding-top:2.5rem;
-        padding-bottom:2.5rem;
-        text-align:center;
-    }
-}
+@import './footer.scss';
 
-.title-footer{
-    color:#fff;
-    margin-bottom:2rem;
-}
-.icons{
-    display:grid;
-    column-gap:1.5rem;
-    grid-template-columns:repeat(2,35px);
-    grid-template-rows:35px;
-    justify-content:center;
-    margin-bottom:8rem;
-    .logo-facebook-footer,.logo-instagram-footer{
-        text-decoration:none;
-    }
-    img{
-        width:100%;
-        height:100%;
-    }
-    @media screen and (min-width:1024px){
-        column-gap:3rem;
-    }
-}
-.grid-footer{
-    display:flex;
-    flex-direction:column;
-    @media screen and (min-width:1024px){
-        flex-direction:row;
-        justify-content:space-between;
-    }
-}
-.reserved{
-    margin-bottom:2rem;
-}
