--- a/estilos/sass/contact_us.scss
+++ b/estilos/sass/contact_us.scss
@@ -102,7 +102,7 @@ body{
     margin-top:5rem;
     background-color:rgb(11, 96, 192);
     .wrapper{
-        padding-top:2.5rem;
+        padding:2.5rem 0;
     }
     .grid{
         display:grid;
@@ -197,9 +197,6 @@ body{
     color:#fff;
     .title-info-about{
         margin-top:2.5rem;
-        // &.second{
-        //     margin-top:2rem;
-        // }
     }
     .welcome-info-about,.address-info-about,.number-info-about,.hours-info-about{
         margin-top:1.6rem;
@@ -208,4 +205,126 @@ body{
         text-align:left;
     }
 }
+//direction-maps
+.direction-map{
+    height:20rem;
+    position:relative;
+    z-index:10;
+    .map{
+        width:100%;
+        height:100%;
+        pointer-events: none;
+    }
+
+}
+//Emergency 
+.emergency{
+    margin-top:3rem;
+    .title-emergency{
+        text-align: center;
+        margin-bottom: 3rem;
+        font-size: 2.5rem;
+        font-weight:500;
+        color: #0b60c0;
+        }
+    .grid{
+    display:flex;
+    flex-direction:column;
+    row-gap:.1rem;
+    @media screen and (min-width:1024px){
+    flex-direction:row;
+    column-gap:.1rem;
+    row-gap:0;
+    }
+    .card{
+        display:flex;
+        flex-direction:column;
+        position:relative;
+        flex: 0 1 50%;
+        .img__card{
+            flex: 0 1 auto;
+            height: 30rem;
+            img{
+                width:100%;
+                height:100%;
+                object-fit:cover;
+            }
+        }
+        .paragraph__card{
+            text-align:center;
+            width:20rem;
+            color:#fff;
+            position:absolute;
+            top:50%;
+            right:50%;
+            transform:translate(50%,-50%);
+            z-index:20;
+        }
+        .title__card{
+            font-size:1.8rem;
+            font-weight:500;
+            margin-bottom:2rem;
+        }
+        .text__card{
+            margin-bottom: 2rem;
+            font-size:1.4rem;
+            font-weight:600;
+            width:100%;
+            p{
+                line-height:1.6rem;
+            }
+        }
+        &::after{
+            content:'';
+            display:block;
+            position:absolute;
+            top:0;
+            bottom:0;
+            right:0;
+            left:0;
+            z-index:10;
+            background-color:rgba(0, 0, 0, 0.4);
+        }
+    }
+}
+}
+//Info company
+.info-company{
+margin-top:5rem;
+}
+.wrapper-info-company{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    flex-direction:column;
+    row-gap:2rem;
+    @media screen and (min-width:1024px){
+        row-gap:0;
+        column-gap:15rem;
+        flex-direction:row;
+    }
+}.title__fax-number,.title__email{
+    font-size:1.2rem;
+}
+
+.text__fax-number,.text__email{
+    color:rgb(16, 191, 250);
+}
+.text__fax-number{
+    text-decoration:none;
+}
+.text__email{
+    font-weight:600;
+}
+.fax-number,.email{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    row-gap:2rem;
+}
 @import './footer.scss';
+
+.footer{
+    margin-top:5rem;
+}
