--- a/estilos/sass/contact_us.scss
+++ b/estilos/sass/contact_us.scss
@@ -93,6 +93,7 @@ body{
     text-align: center;
     margin-bottom: 3rem;
     font-size: 2.5rem;
+    font-weight: 500;
     color:rgb(11, 96, 192);
 }
 
