--- a/estilos/sass/header.scss
+++ b/estilos/sass/header.scss
@@ -1,19 +1,22 @@
 .header{
     position:sticky;
     top:0;
-    z-index:30;
+    z-index:30; 
     background-color:rgb(11, 96, 192);
     .wrapper{
         display:grid;
         grid-template-columns:20% 80%;
         grid-template-rows:1fr;
-        padding:1.5rem 0;
+        padding:1.5rem 0; 
         align-items:center;
         color:#fff;
         @media screen and (min-width:1024px){
             grid-template-columns: 40% 60%;
       
-        }
+        } 
+    }
+    &.header-shadow{
+        box-shadow: -2px 2px 8px 1px rgb(0 0 0 / 50%);
     }
 }
 .name-company{
@@ -100,6 +103,8 @@
     transform: translate(0, 0);
 }
 
+
+
 .menu-burguer{
     a{
         width:1.4rem;
@@ -114,3 +119,5 @@
         display:none;
     }
 }
+
+
