--- a/estilos/sass/index.scss
+++ b/estilos/sass/index.scss
@@ -85,7 +85,8 @@ body{
 .title-purpose{
     text-align:center;
     margin-bottom:3rem;
-    font-size:2.5rem;
+    font-size: 2.5rem;
+    font-weight: 500;
     color:rgb(11, 96, 192);
 }
 .our-purpose{
@@ -188,7 +189,8 @@ body{
 .title-recognition{
     text-align:center;
     margin-bottom:3rem;
-    font-size:2.5rem;
+    font-size: 2.5rem;
+    font-weight: 500;
     color:rgb(11, 96, 192);
 }
 .btn-about-recognition{
@@ -273,6 +275,7 @@ body{
     text-align: center;
     margin-bottom: 3rem;
     font-size: 2.5rem;
+    font-weight: 500;
     color:rgb(11, 96, 192);
 }
 
@@ -324,7 +327,8 @@ body{
 }
 .title-home-delivery{
     text-align:center;
-    font-size:2.5rem;
+    font-size: 2.5rem;
+    font-weight: 500;
     color:#fff;
 }
 .btn-home-delivery{
