--- a/estilos/sass/header.scss
+++ b/estilos/sass/header.scss
@@ -16,7 +16,7 @@
         } 
     }
     &.header-shadow{
-        box-shadow: -2px 2px 8px 1px rgb(0 0 0 / 50%);
+        box-shadow: -2px 2px 8px 1px rgb(0,0,.5);
     }
 }
 .name-company{
