--- a/estilos/sass/header.scss
+++ b/estilos/sass/header.scss
@@ -41,20 +41,36 @@
  ul{
      width:inherit;
      list-style-type:none;
- }
- li{
-    padding-bottom:1.5rem;
-    margin:1.5rem 2.5rem 0 2.5rem;
-    border-bottom:1px solid gray;
-    &:first-of-type{
-    margin-top:0;
+     a{ 
+        text-decoration:none;
+        font-size:1.4rem;
+        font-weight:400;
+        color:#fff;
+        display:block;
+        width:100%;
+        height:100%;
+        padding: 2rem 0;
+        padding-left:2rem;
+        font-size:1.3rem;
+        &:hover{
+        color:lightblue;
+        }
     }
+    
  }
- a {
-     text-decoration:none;
-     font-size:1.6rem;
-     color:#fff;
+
+ li{
+    margin:0 1.5rem;
+    border-bottom:1px solid rgb(58, 58, 58);
+    &:first-of-type{
+        a{
+            padding-top:0;
+        }
+
+    }
+
  }
+
   @media screen and (min-width:1024px){
       justify-self:flex-end;
       position:static;
@@ -70,6 +86,17 @@
       width:auto;
     ul{
         display:flex;
+
+        a{
+            font-size:1.2rem;
+            text-decoration:none;
+            font-weight:400;
+            color:#fff;
+            padding:0;
+            &:hover{
+                color:lightgray;
+                }
+        }
     }
     li{
         margin:0;
@@ -80,18 +107,18 @@
             padding-right:0;
         }
     }
-    a{
-        font-size:1.2rem;
-    }
  }
  .close-menu{
     display: inline-block;
     color: #fff;
+    font-size:1.5rem;
     font-weight: 600;
     position: absolute;
     top: 5%;
     right: 10%;
     z-index: 40;
+    text-decoration:none;
+
     @media screen and (min-width:1024px){
         position:static;
         display:none;
