--- a/estilos/sass/contact_us.scss
+++ b/estilos/sass/contact_us.scss
@@ -199,7 +199,7 @@ body{
     text-align:center;
     color:#fff;
     .title-info-about{
-        margin-top:2.5rem;
+        margin-top:3rem;
     }
     .welcome-info-about,.address-info-about,.number-info-about,.hours-info-about{
         margin-top:1.6rem;
@@ -300,7 +300,7 @@ margin-top:5rem;
     justify-content:center;
     align-items:center;
     flex-direction:column;
-    row-gap:2rem;
+    row-gap:2rem; 
     @media screen and (min-width:1024px){
         row-gap:0;
         column-gap:15rem;
@@ -311,7 +311,8 @@ margin-top:5rem;
 }
 
 .text__fax-number,.text__email{
-    color:rgb(16, 191, 250);
+    color:#0b60c0;
+    font-size:1.2rem;
 }
 .text__fax-number{
     text-decoration:none;
