--- a/estilos/sass/header.scss
+++ b/estilos/sass/header.scss
@@ -7,7 +7,7 @@
         display:grid;
         grid-template-columns:20% 80%;
         grid-template-rows:1fr;
-        padding:1.5rem 0; 
+        padding:1.5rem 0;  
         align-items:center;
         color:#fff;
         @media screen and (min-width:1024px){
@@ -16,7 +16,7 @@
         } 
     }
     &.header-shadow{
-        box-shadow: -2px 2px 8px 1px rgb(0,0,.5);
+        box-shadow: -2px 2px 8px 1px #00234a8c;
     }
 }
 .name-company{
