--- a/estilos/sass/index.scss
+++ b/estilos/sass/index.scss
@@ -85,9 +85,12 @@ body{
 .title-purpose{
     text-align:center;
     margin-bottom:3rem;
-    font-size: 2.5rem;
-    font-weight: 500;
+    font-size: 2rem;
+    font-weight: 400;
     color:rgb(11, 96, 192);
+    @media screen and (min-width:1024px){
+        font-size:2.5rem;
+    }
 }
 .our-purpose{
     margin-top:3rem;
@@ -134,11 +137,18 @@ body{
         flex: 0 1 50%;
         display:flex;
         flex-direction:column;
+        h2{
+            font-weight:400;
+        }
         p{
             margin-top:2rem;
             font-size:1.2rem;
             color:gray;
         }
+        @media screen and (min-width:1024px){
+            justify-content: center;
+        }
+
     }
 }
 .text__card{ 
@@ -148,6 +158,8 @@ body{
     flex: 1 1 100%;
     @media screen and (min-width:1024px){
         flex:1 1 50%; 
+        display:flex;
+        align-items:center;
     }
 }
 //recognition
@@ -155,11 +167,14 @@ body{
     margin-top:3rem;
     background-color:#efefef;
     .wrapper-recognition{
-        width:95%;
-        margin-left:auto;
-        margin-right:auto;
+        width:calc(100% - 4rem);
+        margin-left:2rem;
+        margin-right:2rem;
+       // max-width:1150px;
         @media screen and (min-width:1024px){
-            width:80%;
+            width:70%;
+            margin-left:auto;
+            margin-right:auto;
         }
     }
     .card{
@@ -183,15 +198,22 @@ body{
     .info__card{
         padding:3rem 0;
         flex: 0 1 50%;
+        @media screen and (min-width:1024px){
+            //display:flex;
+            //justify-content:center;
+        }
     }
 }
 
 .title-recognition{
     text-align:center;
     margin-bottom:3rem;
-    font-size: 2.5rem;
-    font-weight: 500;
+    font-size: 2rem;
+    font-weight: 400;
     color:rgb(11, 96, 192);
+    @media screen and (min-width:1024px){
+        font-size:2.5rem;
+    }
 }
 .btn-about-recognition{
     padding:1rem 2rem;
@@ -205,6 +227,8 @@ body{
     font-size:1.2rem;
     h2{
         margin-bottom:1.5rem;
+        font-size: 1.5rem;
+        font-weight: 400;
     }
     &.first{
         margin-bottom:3rem;
@@ -222,9 +246,11 @@ body{
     .grid{
     display:flex;
     flex-direction:column;
-    @media screen and (min-width:1024px){
+    @media screen and (min-width:768px){
     flex-direction:row;
-    column-gap:.1rem;
+    }
+    @media screen and (min-width:1024px){
+        column-gap:.1rem;
     }
     }
     .card{
@@ -233,7 +259,7 @@ body{
         position:relative;
         .img__card{
             flex: 0 1 auto;
-            height: 30rem;
+            height: 35rem;
             img{
                 width:100%;
                 height:100%;
@@ -242,7 +268,7 @@ body{
         }
         .paragraph-about-us{
             text-align:center;
-            width:20rem;
+            width:80%;
             color:#fff;
             position:absolute;
             top:50%;
@@ -250,10 +276,15 @@ body{
             transform:translate(50%,-50%);
             z-index:20;
             h2{
-                font-size:2.5rem;
+                font-size:2rem;
+                font-weight:400;
+                @media screen and (min-width:768px){
+                    font-size:2.5rem;
+                }
             }
             p{
                 font-size:1.5rem;
+                margin-top:2rem;
             }
         }
     &::after{
@@ -267,7 +298,7 @@ body{
         z-index:10;
         background-color:rgba(0, 0, 0, 0.4);
     }
-    @media screen and (min-width:1024px){
+    @media screen and (min-width:768px){
         flex: 0 1 50%; 
     }
     }
@@ -276,9 +307,12 @@ body{
 .title-about-us{
     text-align: center;
     margin-bottom: 3rem;
-    font-size: 2.5rem;
-    font-weight: 500;
+    font-size: 2rem;
+    font-weight: 400;
     color:rgb(11, 96, 192);
+    @media screen and (min-width:1024px){
+        font-size:2.5rem;
+    }
 }
 
 //home-delivery
@@ -289,7 +323,7 @@ body{
 .banner-home-delivery{
     background-image: url('../../img/home-delivery.jpeg');
     flex-direction: column;
-    height: 15rem;
+    height: 18rem;
     background-position:50%;
     background-size: cover;
     position:relative;
@@ -304,6 +338,9 @@ body{
         right:0;
         left:0;
     }
+    @media screen and (min-width:1024px){
+        height:15rem;
+    }
 }
 
 .grid-banner-home-delivery{
@@ -311,12 +348,14 @@ body{
     flex-direction: column;
     text-align: center;
     align-items: center;
+    justify-content: center;
     position: absolute;
     top: 50%;
     right: 50%;
     transform: translate(50%, -50%);
     z-index: 20;
     row-gap:1.5rem;
+    width: 60%;
     @media screen and (min-width:1024px){
         flex-direction:row;
         row-gap:0;
@@ -326,9 +365,12 @@ body{
 }
 .title-home-delivery{
     text-align:center;
-    font-size: 2.5rem;
-    font-weight: 500;
+    font-size: 2rem;
+    font-weight: 400;
     color:#fff;
+    @media screen and (min-width:1024px){
+        font-size:2.5rem;
+    }
 }
 .btn-home-delivery{
     padding:1rem 2rem;
