--- a/estilos/sass/meet.scss
+++ b/estilos/sass/meet.scss
@@ -34,9 +34,12 @@ body{
         text-align: center;
         margin-top:3rem;
         margin-bottom:3rem;
-        font-size: 2.5rem;
-        font-weight: 500;
+        font-size: 2rem;
+        font-weight: 400;
         color:rgb(11, 96, 192);
+        @media screen and (min-width:1024px){
+            font-size:2.5rem;
+        }
     }
     .grid{
         display:flex;
@@ -216,12 +219,12 @@ body{
         flex-direction:column;
         .img__card{
             flex:0 1 auto;
-            height:25rem;
-            width:25rem; 
+            height:80vw;
+            width:80vw; 
             border-radius:50%;
             @media screen and (min-width:768px){
-                width:20rem;
-                height:20rem;
+                width:25vw;
+                height:25vw;
             }
             img{
                 width:100%;
