--- a/estilos/sass/header.scss
+++ b/estilos/sass/header.scss
@@ -4,26 +4,32 @@
     z-index:30; 
     background-color:rgb(11, 96, 192);
     .wrapper{
-        display:grid;
-        grid-template-columns:20% 80%;
-        grid-template-rows:1fr;
+        //display:grid;
+        //grid-template-columns:20% 80%;
+        //grid-template-rows:1fr;
+        display:flex;
         padding:1.5rem 0;  
         align-items:center;
         color:#fff;
         @media screen and (min-width:1024px){
-            grid-template-columns: 40% 60%;
+        //    grid-template-columns: 40% 60%;
       
         } 
     }
     &.header-shadow{
         box-shadow: -2px 2px 8px 1px #00234a8c;
     }
-}
-.name-company{
-    justify-self:flex-start;
+}  
+.name-company{ 
+    flex: 1 1 auto;
     text-align:center;
-    font-size: 1.6rem;
-    font-weight: 500;
+    h1{
+        font-size: 1.6rem;
+        font-weight: 500;
+    }
+    @media screen and (min-width:1024px){
+        text-align:left;
+    }
 }
 .menu{
     padding-top:4.5rem;
@@ -70,7 +76,7 @@
     }
 
  }
-
+  
   @media screen and (min-width:1024px){
       justify-self:flex-end;
       position:static;
@@ -105,6 +111,14 @@
         border-bottom:none;
         &:last-of-type{
             padding-right:0;
+        }
+        &:nth-of-type(4){
+            display:none;
+        }
+        @media screen and (min-width:1280px){
+            &:nth-of-type(4){
+                display:block;
+            }
         }
     }
  }
