--- a/estilos/sass/index.scss
+++ b/estilos/sass/index.scss
@@ -285,9 +285,13 @@ body{
             p{
                 font-size:1.5rem;
                 margin-top:2rem;
-            }
+                @media screen and (min-width:1024px){
+                    margin-top:6rem;
+                }
+            } 
+
         }
-    &::after{
+    &::after{ 
         content:'';
         display:block;
         position:absolute;
