--- a/estilos/sass/contact_us.scss
+++ b/estilos/sass/contact_us.scss
@@ -28,9 +28,12 @@ body{
     background-image:url('../../img/banner_contact_us.jpg');
     background-size:cover;
     background-position:50%;
-    height:15rem;
+    height:20rem;
     position:relative;
     z-index:10;
+    @media screen and (min-width:1024px){
+        height:15rem;
+    }
 }
 .request-appoiment{
     position: absolute;
@@ -40,10 +43,10 @@ body{
     color: #fff;
     font-size: 2.3rem;
     text-align: center;
-    //width: rem;
     z-index:20;
     display:flex;
     flex-direction:column;
+    width:60%;
     @media screen and (min-width:1024px){
         width:100%;
         flex-direction: row;
@@ -51,16 +54,22 @@ body{
         align-items: center;
         gap: 2rem;
     }
+    .title__request-appoiment{
+        font-size:2.3rem;
+        font-weight:400;
+    }
     .btn__request-appoiment{
-        margin-top:1.2rem;
-        padding:1rem 2rem;
-        color:#fff;
-        background-color:rgb(11, 96, 192);
-        text-decoration: none;
-        display:inline-block;
-        font-size:1.2rem;
-        @media screen and (min-width:1024px){
-            margin-top:0;
+        a{
+            margin-top:1.2rem;
+            padding:1rem 2rem;
+            color:#fff;
+            background-color:rgb(11, 96, 192);
+            text-decoration: none;
+            display:inline-block;
+            font-size:1.2rem;
+            @media screen and (min-width:1024px){
+                margin-top:0;
+            }
         }
     }
 }
