--- a/estilos/sass/contact_us.scss
+++ b/estilos/sass/contact_us.scss
@@ -123,7 +123,7 @@ body{
         //row-gap:3rem;
         @media screen and (min-width:1024px){
             grid-template-columns:repeat(2,1fr);
-            column-gap:2rem;
+            column-gap:3rem;
          }
     }
 }
@@ -219,6 +219,42 @@ body{
     @media screen and (min-width:1024px){
         text-align:left;
     }
+    .hours-info-about{
+    display: flex;
+    justify-content: center;
+    @media screen and (min-width:1024px){
+        justify-content: flex-start;
+    }
+    }
+    .container-hours-info-about{
+        position:relative;
+        text-align:left;
+    }
+    .icon-open-close{
+        position:absolute;
+        top: .25rem;
+        right: -25px;
+        width:1rem;
+        height:1rem;
+        img{
+            width:100%;
+            height:100%;
+        }
+    }
+    .list-hours{
+        display:none;
+        list-style-type:none;
+        li{
+            margin-bottom:.5rem;
+            a{
+                text-decoration:none;
+                color:#fff;
+            }
+        }
+    }
+    .show-list-hours{
+        display:block;
+    }
 }
 //direction-maps
 .direction-map{
@@ -261,7 +297,10 @@ body{
         flex: 0 1 50%;
         .img__card{
             flex: 0 1 auto;
-            height: 30rem;
+            height: 40rem;
+            @media screen and (min-width:768px){
+                height:30rem;
+            }
             img{
                 width:100%;
                 height:100%;
