--- a/estilos/sass/contact_us.scss
+++ b/estilos/sass/contact_us.scss
@@ -231,6 +231,7 @@ body{
         text-align:left;
     }
     .icon-open-close{
+        cursor:pointer;
         position:absolute;
         top: .25rem;
         right: -25px;
